package hw4.composition;

public class File {
    private String name;

    public File(String name) {
        this.name = name;
    }

    public void print() {
        System.out.print(name);
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}